k8s/db/mongodb-single/mongo-express-single-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-single-deployment
  labels:
    app: mongo-express-single
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-single
  template:
    metadata:
      labels:
        app: mongo-express-single
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
          - containerPort: 8081
