k8s/db/mongodb-single/mongodb-single-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-single-statefulset
  labels:
    app: mongodb-single
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-single
  serviceName: mongodb-single-service
  template:
    metadata:
      labels:
        app: mongodb-single
    spec:
      containers:
      - name: mongodb
        image: mongo:7.0
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongodb-single-pv-claim
            mountPath: /data/db
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mongodb-single-pv-claim
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
