k8s/db/mongodb-single/mongo-express-single-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-single-service
spec:
  selector:
    app: mongo-express-single
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
