k8s/db/mongodb-single/mongodb-single-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-single-service
spec:
  selector:
    app: mongodb-single
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
