k8s/db/mongodb-single/mongo-express-single-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-single-ingress
spec:
  rules:
  - host: mongo-express-single.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-single-service
            port:
              number: 80
